--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,4 +1,5 @@
 /* src/main.css */
+@import 'react-toastify/dist/ReactToastify.css';
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
